qtvcp -stylesheet editor: add search capabilities
Thank you Jim! (Persei802)

--- a/share/qtvcp/widgets_ui/style_dialog.ui
+++ b/share/qtvcp/widgets_ui/style_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>568</width>
-    <height>374</height>
+    <width>916</width>
+    <height>334</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,7 +55,7 @@
            <property name="minimumSize">
             <size>
              <width>120</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
@@ -87,7 +87,7 @@
            <property name="minimumSize">
             <size>
              <width>80</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
@@ -116,7 +116,7 @@
            <property name="minimumSize">
             <size>
              <width>120</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
           </widget>
@@ -141,6 +141,12 @@
          </item>
          <item>
           <widget class="QLineEdit" name="lineEdit_path">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>30</height>
+            </size>
+           </property>
            <property name="readOnly">
             <bool>true</bool>
            </property>
@@ -186,13 +192,13 @@
            <property name="minimumSize">
             <size>
              <width>80</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
@@ -224,13 +230,13 @@
            <property name="minimumSize">
             <size>
              <width>100</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
@@ -240,6 +246,91 @@
          </item>
          <item>
           <spacer name="horizontalSpacer_3">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QLineEdit" name="search_box">
+           <property name="minimumSize">
+            <size>
+             <width>0</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>16777215</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="placeholderText">
+            <string>Search...</string>
+           </property>
+           <property name="clearButtonEnabled">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_prev">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Previous</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btn_next">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="minimumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>80</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="text">
+            <string>Next</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_6">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -262,13 +353,13 @@
            <property name="minimumSize">
             <size>
              <width>80</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="maximumSize">
             <size>
              <width>16777215</width>
-             <height>24</height>
+             <height>30</height>
             </size>
            </property>
            <property name="text">
@@ -310,7 +401,7 @@
        <property name="minimumSize">
         <size>
          <width>60</width>
-         <height>24</height>
+         <height>30</height>
         </size>
        </property>
        <property name="text">
@@ -355,7 +446,7 @@
        <property name="minimumSize">
         <size>
          <width>60</width>
-         <height>24</height>
+         <height>30</height>
         </size>
        </property>
        <property name="text">
