--- a/share/qtvcp/screens/qtdragon/qtdragon.ui
+++ b/share/qtvcp/screens/qtdragon/qtdragon.ui
@@ -8021,6 +8021,52 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="doubleIndicator" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="invert_the_status" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="is_on_status" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="is_idle_status" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="isRunSensitive" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="isManSensitive" stdset="0">
+                           <bool>false</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8115,6 +8161,40 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_idle_status" stdset="0">
+                           <bool>false</bool>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="is_homed_status" stdset="0">
+                           <bool>false</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8205,6 +8285,34 @@ LOG</string>
                           </property>
                           <property name="autoExclusive">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -8297,6 +8405,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8388,6 +8524,34 @@ LOG</string>
                           <property name="autoExclusive">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8478,6 +8642,34 @@ LOG</string>
                           </property>
                           <property name="autoExclusive">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -8576,6 +8768,34 @@ LOG</string>
                           <property name="autoRepeatInterval">
                            <number>100</number>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8673,6 +8893,34 @@ LOG</string>
                           <property name="autoRepeatInterval">
                            <number>100</number>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8764,6 +9012,34 @@ LOG</string>
                           <property name="checkable">
                            <bool>false</bool>
                           </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
+                          </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
                           </property>
@@ -8854,6 +9130,34 @@ LOG</string>
                           </property>
                           <property name="checkable">
                            <bool>false</bool>
+                          </property>
+                          <property name="indicator_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="indicator_status_option" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="on_color" stdset="0">
+                           <color>
+                            <red>85</red>
+                            <green>255</green>
+                            <blue>0</blue>
+                           </color>
+                          </property>
+                          <property name="shape_option" stdset="0">
+                           <number>1</number>
+                          </property>
+                          <property name="flashIndicator" stdset="0">
+                           <bool>true</bool>
+                          </property>
+                          <property name="right_edge_offset" stdset="0">
+                           <number>4</number>
+                          </property>
+                          <property name="top_edge_offset" stdset="0">
+                           <number>5</number>
+                          </property>
+                          <property name="is_mdi_finished_status" stdset="0">
+                           <bool>true</bool>
                           </property>
                           <property name="view_change_action" stdset="0">
                            <bool>false</bool>
@@ -17767,7 +18071,7 @@ SCROLL</string>
              <number>2</number>
             </property>
             <property name="text">
-             <string>04:32:14 AM</string>
+             <string>05:27:44 PM</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignCenter</set>
@@ -18842,8 +19146,8 @@ SCROLL</string>
   <slot>btn_systemtool_toggled()</slot>
  </slots>
  <buttongroups>
-  <buttongroup name="selectButtonGroup"/>
-  <buttongroup name="mode_buttonGroup"/>
   <buttongroup name="page_buttonGroup"/>
+  <buttongroup name="mode_buttonGroup"/>
+  <buttongroup name="selectButtonGroup"/>
  </buttongroups>
 </ui>
