qtdragon_lathe -add a user dro for temporary setup reference

--- a/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.qss
+++ b/share/qtvcp/screens/qtdragon_lathe/qtdragon_lathe.qss
@@ -88,6 +88,10 @@ DROLabel[isHomed=false] {
     color: red;
 }
 
+UserDROLabel{
+    font: 18pt "Lato Heavy";
+}
+
 QLabel#lbl_cycle_start,
 QLabel#lbl_home_all {
     font: 10pt "Lato Heavy";
